--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: rgb(36,31,129);
+    background: linear-gradient(90deg, rgba(36,31,129,1) 
+    0%, rgba(16,61,191,1) 41%, rgba(9,93,164,1) 100%);
+}
